<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="200dp"
    android:layout_height="match_parent"
    tools:context="com.example.sagar.moviesuccesspredictor.OneFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterinfo"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:columnCount="2"
            android:layout_marginTop="30dp">
            <TextView

                android:layout_column="0"
                android:layout_row="0"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actor1" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
            android:entries="@array/items"
                android:background="@color/colorPrimary"
                />
            <TextView

                android:layout_column="0"
                android:layout_row="1"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actor1" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:entries="@array/items"
                android:background="@color/colorPrimary"

                />
            <TextView

                android:layout_column="0"
                android:layout_row="2"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actor2" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:entries="@array/items"
                android:background="@color/colorPrimary"

                />
            <TextView

                android:layout_column="0"
                android:layout_row="3"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actor1" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:entries="@array/items"
                android:background="@color/colorPrimary"

                />

            <TextView

                android:layout_column="0"
                android:layout_row="5"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actress1" />

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="5"
                android:entries="@array/items"
                android:background="@color/colorPrimary"

                />

            <TextView

                android:layout_column="0"
                android:layout_row="6"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actress3" />

            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="6"
                android:entries="@array/items"
                android:background="@color/colorPrimary"

                />


        </GridLayout>
        </RelativeLayout>
   </ScrollView>
